bug fix image overflow #248

--- a/react-frontend/src/profile/profile-image-input/ProfileImageInput.module.css
+++ b/react-frontend/src/profile/profile-image-input/ProfileImageInput.module.css
@@ -1,5 +1,6 @@
-.profile-image{
+.profile-image-input{
     max-width: 100%;
+    max-height: 100vh;
 }
 
 .upload-container{
